@@ -1,6 +1,7 @@
 4.0.0.pre.1
 * Adds `ngram` function.
 * Added `is_empty` and `is_nonempty` functions.
+* Added `to_string`, `to_number`, `to_time`, and `to_date` functions.
 * Reverses the argument order of append and prepend functions.
 * Fixed serialization to correctly wrap objects that implement `to_h` or `to_hash`
   (unsupported objects are now explictly rejected with a `Fauna::SerializationError`).
